# keycloak-oauth2-proxy-react-example-app

./: .gitignore  Makefile  README.md  docker-compose.yaml  oauth2-proxy.cfg
backends/api/: Dockerfile  pyproject.toml  requirements.bak.txt  requirements.txt
backends/api/app/: app.py  post_controller.py  post_models.py  post_service.py  posts.json
frontend/: .pnp.cjs  package.json
frontend/src/: MockUserDBService.ts  authProvider.tsx  dataProvider.tsx  index.tsx  oauth2ProxyService.ts  simpleDataProvider.ts
keycloak/: oauth2-proxy-realm.json  oauth2-proxy-users-0.json
nginx/: oauth2.conf
