[tool.poetry]
name = "api"
version = "0.1.0"
description = "Example app for testing oauth2-proxy"
authors = ["Roman Pletnev <4804877+r-pletnev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
litestar = {extras = ["standard"], version = "^2.13.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
